--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script defer src="./src/scripts/index.js" type="module"></script>
   </head>
   <body>
+    <!-- show this warning if on mobile devices or small screens -->
+    <div class="warning"></div>
     <div class="container">
       <!-- ! HEADER -->
       <header id="header">
